--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<p>My favorite color is <span class="favorite-color">Red</span><color-name></p>
+	<style>
+  .favorite-color {
+    color: red;
+  }
+</style>
 </body>
 
 </html>
